ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Labour_Rate__mdt/Labour_Rate__mdt.object-meta.xml
<CustomObject>
    <description>For tracking rate required for  various  pitches</description>
    <label>Labour Rate</label>
    <pluralLabel>Labour Rates</pluralLabel>
</CustomObject>