ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Labour_Rate__mdt/fields/Pitch__c.field-meta.xml
<CustomField>
    <fullName>Pitch__c</fullName>
    <label>Pitch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(none)</fullName>
                <default>true</default>
                <label>(none)</label>
            </value>
            <value>
                <fullName>1/12</fullName>
            </value>
            <value>
                <fullName>1.5/12</fullName>
            </value>
            <value>
                <fullName>2/12</fullName>
            </value>
            <value>
                <fullName>2.5/12</fullName>
            </value>
            <value>
                <fullName>3/12</fullName>
            </value>
            <value>
                <fullName>3.5/12</fullName>
            </value>
            <value>
                <fullName>4/12</fullName>
            </value>
            <value>
                <fullName>4.5/12</fullName>
            </value>
            <value>
                <fullName>4/1</fullName>
            </value>
            <value>
                <fullName>5/12</fullName>
            </value>
            <value>
                <fullName>6/12</fullName>
            </value>
            <value>
                <fullName>7/12</fullName>
            </value>
            <value>
                <fullName>8/12</fullName>
            </value>
            <value>
                <fullName>9/12</fullName>
            </value>
            <value>
                <fullName>10/12</fullName>
            </value>
            <value>
                <fullName>11/12</fullName>
            </value>
            <value>
                <fullName>12/12</fullName>
            </value>
            <value>
                <fullName>14/12</fullName>
            </value>
            <value>
                <fullName>16/12</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Mansard</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>