ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Labour_Rate__mdt/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Dollar rate (per bundle) for labour</description>
    <label>Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>