ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Labour_Rate__mdt/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CA</fullName>
                <default>true</default>
                <label>CA</label>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Blair</fullName>
            </value>
            <value>
                <fullName>Hyload</fullName>
            </value>
            <value>
                <fullName>Decra</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>