ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Labour_Rate__mdt/listViews/All_Values.listView-meta.xml
<ListView>
    <fullName>All_Values</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Active__c</columns>
    <columns>Pitch__c</columns>
    <columns>Rate__c</columns>
    <columns>Sector__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Values</label>
    <language>en_US</language>
</ListView>